# ComboFT

./: .gitignore  .gitmodules  README.md  environment.yml  package.json  pnpm-lock.yaml  startApp.bat  tsconfig.json  vite.config.js
src/: app.html  store.ts  style.css
src-tauri/: .gitignore  .taurignore  Cargo.toml  babble_settings.backup  babble_settings.json  pyproject.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python/learningTauri/: ZConnector.py  __init__.py  __main__.py
src-tauri/src/: lib.rs  main.rs
src/lib/: BackendController.ts  CameraConnection.svelte  CameraStream.svelte  ETVR_API.ts  ETVR_Controller.ts  ET_API.ts  Logger.ts  PB_API.ts  PB_Controller.ts  RustInvoker.ts  test.json
src/lib/CameraSvelteComponents/: CameraConnection.svelte  CameraConnectionType.ts  CameraStream.svelte  DetailedCameraConnection.svelte
src/lib/structs/: BackendStatus.ts  BackendTarget.ts  Box.ts  Camera.ts  CameraSourceType.ts  CameraStreamType.ts  CroppingSender.ts  ETVRBackendStatus.ts  ETVRConfig.ts  ET_Algorithm.ts  TrackerConfigInput.ts  TrackerConfigOutput.ts  TrackerPosition.ts  TrackingCamera.ts
src/lib/structs/ET_Api/: ET_AlgorithmConfig.ts  (+11 more)
src/routes/: +layout.svelte  +page.svelte
src/routes/LayoutComps/: DrawerContents.svelte  Navbar.svelte
src/routes/cropping/: +page.svelte  Cropper.svelte
src/routes/inspect/: +page.svelte  AlgoSelect.svelte  AlgoSettingsModal.svelte  SelectableCameraStream.svelte  SettingsTab.ts
src/routes/setup/: +page.svelte
src/routes/test/: +page.svelte
src/routes/tracking/: +page.svelte
(+12 files in other folders)
